<resources>
    <string name="app_name" translatable="false">Expenses</string>
    <string name="drawer_opened" translatable="false">drawer_opened</string>
    <string name="drawer_closed" translatable="false">drawer_closed</string>
    <string name="home">Home</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="expenses_details">Expenses Details</string>
    <string name="debtors">Debtors</string>
    <string name="debtor">Debtor</string>
    <string name="add_debtor">Add Debtor</string>
    <string name="add_value">Value</string>
    <string name="choose_debtor">choose Debtor</string>
    <string name="new_debtor">New Debtor</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_text">you need to first fill your wallet</string>
    <string name="your_wallet">your wallet is %1$s</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="new_account">Create New Account</string>
    <string name="add_successful">add successful</string>
    <string name="remove_successful">item has removed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="expenses_month">%1$s Expenses</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="share">Share</string>

    <!-- validate Toasts-->
    <string name="toast_empty_field">This field can\'t be empty!</string>
    <string name="toast_user_exist">This User already Exist</string>
    <string name="toast_debtor_exist">This Debtor already Exist</string>
    <string name="toast_debtor_not_exist">This Debtors is no\'t Exist</string>
    <string name="toast_accept_permission">You must Accept Permission First</string>
    <string name="toast_user_deleted">Are you sure you want delete all date for this user</string>
    <string name="toast_password_less_5">Password must be at least 5 characters long!</string>
    <string name="toast_confirm_password">Passwords don\'t match!</string>
    <string name="toast_password_error">Invalid password!</string>
    <string name="toast_email_error">Invalid email address!</string>
    <string name="toast_mobile_error">Invalid mobile number!</string>
    <string name="toast_mobile_not_11">Mobile number must be 11 digits long!</string>
    <string name="toast_webservice_error">Error sending request, please try again</string>
    <string name="toast_no_cost_found">No cost found for this Month</string>
    <string name="toast_no_expenses_found">No expenses found for this Month</string>
    <string name="toast_internet">check your internet connection and try again</string>
    <string name="toast_month">Invalid month</string>
    <string name="toast_password_successfully">Password changed successfully</string>
    <string name="toast_date_error">This Date is already exist</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="choose_month">Choose Month</string>
    <string name="choose">Choose</string>
    <string name="total">Total</string>
    <string name="cost">Cost</string>
    <string name="egp">EGP</string>
    <string name="close">Close</string>
    <string name="delete_user">Delete %1$s Account</string>
    <string name="write_password">first write password for this account</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="we_need_permission_storage">We Need permission Storage click in Permissions from App Info and press
        switch on to Storage
    </string>
    <string name="data_backup">Data Backup</string>
    <string name="backup_massage">Check first if you have a backup on our server</string>
    <string name="backup_not_exist">There is no backup on our server</string>
    <string name="share_body">You want to know your expenses where it going , please download the Expense application
        %1$s and know your daily expenses , and arranging your monthly expenses
    </string>
    <string name="share_link" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>
</resources>
