<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:background="@drawable/rectangle_background"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="AutoFill,LabelFor"/>

    <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:background="@drawable/rectangle_background"
            app:layout_constraintTop_toBottomOf="@id/etCurrentPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="AutoFill,LabelFor"/>

    <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/rectangle_background"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="AutoFill,LabelFor"/>

    <TextView
            android:id="@+id/btnOk"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ok"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"/>

    <TextView
            android:id="@+id/btnCancel"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOk"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>